--- a/bring_u/templates/restaurants.html
+++ b/bring_u/templates/restaurants.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
-
+    <link rel="stylesheet" type="text/css" href="./css/restaurants.css">
     <title>Restaurantes</title>
 </head>
 <body>
-  
     <h2>Lista de restaurantes disponibles</h2>
 
     <div class="container">
