--- a/bring_u/templates/restaurant_detail.html
+++ b/bring_u/templates/restaurant_detail.html
@@ -1,24 +1,70 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>{{ restaurant.name }}</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Bring-u</title>
 </head>
-<body>
-    <h1>{{ restaurant.name }}</h1>
-    <p>{{ restaurant.description }}</p>
-    <h2>Horario de Atención:</h2>
-    <p>Apertura: {{ restaurant.opening_time }}</p>
-    <p>Cierre: {{ restaurant.closing_time }}</p>
+<body style="overflow-x: hidden;">
+    <header style="width: 100vw;">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+          <div class="container d-flex">
+              <a class="navbar-brand" href="/">BRING-U</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse mr-auto" id="navbarNav">
+                  <ul class="navbar-nav ml-auto">
+                      <li class="nav-item mr-auto">
+                          <a class="nav-link" href="#">Home</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="#">About</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="#">Services</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="#">Contact</a>
+                      </li>
+                  </ul>
+              </div>
+          </div>
+      </nav>
+      </header>
     
-    <h2>Menú:</h2>
-    <ul>
-        {% for item in menu_items %}
-            <li>
-                <strong>{{ item.dish_name }}</strong><br>
-                Descripción: {{ item.dish_description }}<br>
-                Precio: {{ item.price }}
-            </li>
-        {% endfor %}
-    </ul>
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col">
+                <h1>{{ restaurant.name }}</h1>
+                <p>Rating ★</p>
+                <p>{{ restaurant.description }}</p>
+                <h2>Horario de Atención:</h2>
+                <p>Apertura: {{ restaurant.opening_time }}</p>
+                <p>Cierre: {{ restaurant.closing_time }}</p>
+            </div> 
+            <div class="col-8">
+                <h2>Menú:</h2>
+                <ul style="list-style: none; height: 80vh; width: 100vw; overflow: auto; overflow-x: hidden;">
+                    {% for item in menu_items %}
+                        <li>
+                            <div class="row">
+                                <div class="col">
+                                    <strong>{{ item.dish_name }}</strong><br>
+                                    Descripción: {{ item.dish_description }}<br>
+                                    Precio: {{ item.price }}
+                                </div>
+                                <div class="col">
+                                    <button class="btn btn-primary" type="submit">Ordenar</button>
+                                </div>
+                            </div>
+                        </li>
+                        <br>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
