--- a/bring_u/templates/restaurant_detail.html
+++ b/bring_u/templates/restaurant_detail.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
@@ -68,3 +68,4 @@
     </div>
 </body>
 </html>
+-->
