--- a/bring_u/templates/business_detail.html
+++ b/bring_u/templates/business_detail.html
@@ -1,4 +1,4 @@
-<!--<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
@@ -23,7 +23,14 @@
                           <a class="nav-link" href="#">About</a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link" href="#">Services</a>
+                        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          Services
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                          <a class="dropdown-item" href="/business">Food</a>
+                          <a class="dropdown-item" href="#">Carpooling</a>
+                          
+                        </div>
                       </li>
                       <li class="nav-item">
                           <a class="nav-link" href="#">Contact</a>
@@ -37,23 +44,23 @@
     <div class="container mt-5">
         <div class="row">
             <div class="col">
-                <h1>{{ restaurant.name }}</h1>
+                <h1>{{ business.name }}</h1>
                 <p>Rating ★</p>
-                <p>{{ restaurant.description }}</p>
+                <p>{{ business.desc }}</p>
                 <h2>Horario de Atención:</h2>
-                <p>Apertura: {{ restaurant.opening_time }}</p>
-                <p>Cierre: {{ restaurant.closing_time }}</p>
+                <p>Apertura: {{ business.opening_time }}</p>
+                <p>Cierre: {{ business.closing_time }}</p>
             </div> 
             <div class="col-8">
                 <h2>Menú:</h2>
                 <ul style="list-style: none; height: 80vh; width: 100vw; overflow: auto; overflow-x: hidden;">
-                    {% for item in menu_items %}
+                    {% for product in products %}
                         <li>
                             <div class="row">
                                 <div class="col">
-                                    <strong>{{ item.dish_name }}</strong><br>
-                                    Descripción: {{ item.dish_description }}<br>
-                                    Precio: {{ item.price }}
+                                    <strong>{{ product.name }}</strong><br>
+                                    Descripción: {{ product.desc }}<br>
+                                    Precio: {{ product.price }}
                                 </div>
                                 <div class="col">
                                     <button class="btn btn-primary" type="submit">Ordenar</button>
@@ -66,6 +73,9 @@
             </div>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
 </body>
 </html>
--->
