--- a/bring_u/templates/home.html
+++ b/bring_u/templates/home.html
@@ -1,4 +1,4 @@
-<!--<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -27,9 +27,8 @@
                           Services
                         </a>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                          <a class="dropdown-item" href="/restaurants">Food</a>
+                          <a class="dropdown-item" href="/business">Business</a>
                           <a class="dropdown-item" href="#">Carpooling</a>
-                          
                         </div>
                       </li>
                       <li class="nav-item">
@@ -49,4 +48,3 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
--->
