Base.html template created

--- a/bring_u/templates/profile.html
+++ b/bring_u/templates/profile.html
@@ -7,12 +7,15 @@
     <title>BRING-U</title>
 </head>
 <body>
-{% extends "base.html" %}
+    {% extends "base.html" %}
     {% block content %}
-        <div class="container mt-5">
-            <h1>BRING-U homepage</h1>
-        </div>
+      <div class="container mt-5">
+        <h1>Perfil </h1>
+        <h2>Órdenes en curso</h2>
+        <p>Orden, estado (sin tomar, en proceso, completado), cancelar orden</p>
+        <h2>Historial de ordenes</h2>
+    </div>
+
     {% endblock %}
-        
 </body>
 </html>
