--- a/bring_u/templates/request.html
+++ b/bring_u/templates/request.html
@@ -7,12 +7,14 @@
     <title>BRING-U</title>
 </head>
 <body>
-{% extends "base.html" %}
+    {% extends "base.html" %}
     {% block content %}
-        <div class="container mt-5">
-            <h1>BRING-U homepage</h1>
+      <div class="container mt-5">
+        <h1>Solicitud </h1>
+        <h2>- Personalizada</h2>
+        <p>Formulario : Ingrese peticion, nombre, descripción, precio, lugar entrega</p>
+        <h2>- Negocios: Redirigir a business.html</h2>
         </div>
-    {% endblock %}
-        
-</body>
+    { % endblock %}
+    </body>
 </html>
