--- a/bring_u/templates/restaurant_detail.html
+++ b/bring_u/templates/restaurant_detail.html
@@ -8,7 +8,7 @@
 </head>
 <body style="overflow-x: hidden;">
     <header style="width: 100vw;">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="barra">
           <div class="container d-flex">
               <a class="navbar-brand" href="/">BRING-U</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
