--- a/bring_u/templates/base.html
+++ b/bring_u/templates/base.html
@@ -32,9 +32,23 @@
                           <a class="dropdown-item" href="#">Carpooling</a>
                         </div>-->
                       </li>
-                      <li class="nav-item">
-                          <a class="nav-link" href="/profile">profile</a>
-                      </li>
+                      {% if user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="/profile">Profile</a>
+                        </li>
+                      {% endif %}
+                      <div class="navbar-nav ms-auto">
+                            {% if user.is_authenticated %}
+                            <a class="nav-link" href="{% url 'logoutaccount' %}">
+                                Logout ({{ user.username }})
+                            </a>
+                            {% else %}
+                            <a class="nav-link" href="{% url 'loginaccount' %}">Login</a>
+                            <a class="nav-link" href="{% url 'signup' %}">
+                                Sign Up
+                            </a>
+                            {% endif %}
+                      </div>
                   </ul>
               </div>
           </div>
