Login and sign-up finished (needs review)

--- a/bring_u/templates/profile.html
+++ b/bring_u/templates/profile.html
@@ -11,6 +11,11 @@
     {% block content %}
       <div class="container mt-5">
         <h1>Perfil </h1>
+        <h3>User Profile</h3>
+        <p><strong>Username:</strong> {{ user.username }}</p>
+        <p><strong>First Name:</strong> {{ user.first_name }}</p>
+        <p><strong>Last Name:</strong> {{ user.last_name }}</p>
+        <p><strong>Email:</strong> {{ user.email }}</p>
         <h2>Órdenes en curso</h2>
         <p>Orden, estado (sin tomar, en proceso, completado), cancelar orden</p>
         <h2>Historial de ordenes</h2>
