--- a/bring_u/templates/profile.html
+++ b/bring_u/templates/profile.html
@@ -4,8 +4,9 @@
         <h1>Perfil </h1>
         <h3>User Profile</h3>
         <p><strong>Username:</strong> {{ user.username }}</p>
-        <p><strong>First Name:</strong> {{ user.first_name }}</p>
+        <p><strong>First Name:</strong> {{ user.name }}</p>
         <p><strong>Last Name:</strong> {{ user.last_name }}</p>
+        <p><strong>Tel:</strong> {{ user.tel }}</p>
         <p><strong>Email:</strong> {{ user.email }}</p>
         <h2>Órdenes en curso</h2>
         <p>Orden, estado (sin tomar, en proceso, completado), cancelar orden</p>
