Cancel order implemented

--- a/bring_u/templates/profile.html
+++ b/bring_u/templates/profile.html
@@ -1,35 +1,42 @@
-{% extends "base.html" %}
-{% block content %}
-      <div class="container mt-5">
-        <h1>Perfil </h1>
-        <h3>User Profile</h3>
-        <p><strong>Username:</strong> {{ user.username }}</p>
-        <p><strong>First Name:</strong> {{ user.name }}</p>
-        <p><strong>Last Name:</strong> {{ user.last_name }}</p>
-        <p><strong>Tel:</strong> {{ user.tel }}</p>
-        <p><strong>Email:</strong> {{ user.email }}</p>
-        <h2>Órdenes en curso</h2>
-        <div class="container">
-          <div class="row">
-              {% for order in orders %}
-              <div class="col-md-4 mb-4">
-                  <div class="card">
-                      <div class="card-body">
-                          <h5 class="card-title">{{ order.name }}</h5>
-                          <p class="card-text">{{ order.desc }}</p>
-                          <p class="card-text">Price: ${{ order.price }}</p>
-                          <p class="card-text" style="color:red">{{ order.status }}</p>
-                      </div>
-                      <div class="card-footer">
-                          <button class="btn btn-danger btn-cancel">Cancel</button>
-                      </div>
-                  </div>
-              </div>
-              {% endfor %}
-          </div>
-      </div>
-      
-      
-        <h2>Historial de ordenes</h2>
-    </div>
-{% endblock %}
+    {% extends "base.html" %}
+    {% block content %}
+        <div class="container mt-5">
+            <h1>Perfil </h1>
+            <h3>User Profile</h3>
+            <p><strong>Username:</strong> {{ user.username }}</p>
+            <p><strong>First Name:</strong> {{ user.name }}</p>
+            <p><strong>Last Name:</strong> {{ user.last_name }}</p>
+            <p><strong>Tel:</strong> {{ user.tel }}</p>
+            <p><strong>Email:</strong> {{ user.email }}</p>
+            <h2>Órdenes en curso</h2>
+            <div class="container">
+            <div class="row">
+                {% for order in orders %}
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ order.name }}</h5>
+                            <h5 class="card-title">{{ order.id_product }}</h5>
+                            <h5 class="card-title">{{ order.fk_id_business }}</h5>
+                            <p class="card-text">{{ order.desc }}</p>
+                            <p class="card-text">Price: ${{ order.price }}</p>
+                            <p class="card-text" style="color:red">{{ order.status }}</p>
+                        </div>
+                        <div class="card-footer">
+                            <form method="post" action="profile">
+                                {% csrf_token %}
+                                <input type="hidden" name="_method" value="DELETE">
+                                <input type="hidden" name="product_id" value="{{ order.fk_id_product.id_product }}">
+                                <button class="btn btn-danger btn-cancel" type="submit" name="product_id" value="{{ order.fk_id_product.id_product }}">Cancel</button>
+                            </form>
+                        </div>        
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+        
+        
+            <h2>Historial de ordenes</h2>
+        </div>
+    {% endblock %}
