--- a/bring_u/templates/business_detail.html
+++ b/bring_u/templates/business_detail.html
@@ -4,28 +4,29 @@
     <script>
 
         // Mostrar en el Modal la información del producto 
-        var data = {};
-        
+
         function sendOrder(button) {
             // Extract product details from data attributes
+            const productId = button.getAttribute('data-product-id');
             const productName = button.getAttribute('data-product-name');
             const productDesc = button.getAttribute('data-product-desc');
             const productPrice = button.getAttribute('data-product-price');
             const businessName = button.getAttribute('data-business-name');
             
-            // Create a data object with the product details
-            data = {
-                name: productName,
-                desc: productDesc,
-                price: productPrice,
-                business: '{{ business.name }}' 
-            };
 
             // Set the product details in the modal
             document.getElementById('productName').textContent = productName;
             document.getElementById('productDesc').textContent = productDesc;
             document.getElementById('productPrice').textContent = productPrice;
             document.getElementById('businessName').textContent = businessName;
+        
+            // Set the product details in form to send
+            document.getElementById('send_product_id').value = productId;
+            document.getElementById('send_product_name').value = productName;
+            document.getElementById('send_product_desc').value = productDesc;
+            document.getElementById('send_product_price').value = productPrice;
+            document.getElementById('send_business_name').value = businessName;
+
 
             console.log(data);
         }
@@ -50,11 +51,13 @@
                             <div class="col">
                                 <strong>{{ product.name }}</strong><br>
                                 Descripción: {{ product.desc }}<br>
+                                Id: {{ product.id_product }}<br>
                                 Precio: {{ product.price }}
                             </div>
                             <div class="col">
                                 <button class="btn btn-primary btn-ordenar" type="button"
                                 data-bs-toggle="modal" data-bs-target="#staticBackdrop"
+                                data-product-id="{{ product.id_product }}"
                                 data-product-name="{{ product.name }}"
                                 data-product-desc="{{ product.desc }}"
                                 data-product-price="{{ product.price }}"
@@ -105,10 +108,11 @@
                                                 <label for="desc_delivery" class="form-label"><strong>Detalles sobre la entrega:</strong></label>
                                                 <input type="text" class="form-control" id="desc_delivery" name="desc_delivery" placeholder="Ejemplo: Esperarme afuera del salon" required>
                                             </div>
-                                            <input type="text" value="{{ business.name }}" name="business_name" hidden="">
-                                            <input type="text" value="{{ product.name }}" name="product_name" hidden="">
-                                            <input type="text" value="{{ product.desc }}" name="product_desc" hidden="">
-                                            <input type="text" value="{{ product.price }}" name="product_price" hidden="">
+                                            <input type="hidden" value="" name="business_name" id="send_business_name">
+                                            <input type="hidden" value="" name="product_id" id="send_product_id">
+                                            <input type="hidden" value="" name="product_name" id="send_product_name">
+                                            <input type="hidden" value="" name="product_desc" id="send_product_desc">
+                                            <input type="hidden" value="" name="product_price" id="send_product_price">
                                             <button type="submit" class="btn btn-primary">Pedir</button>
                                         </form>
                                         </div>
