--- a/bring_u/templates/profile.html
+++ b/bring_u/templates/profile.html
@@ -22,14 +22,47 @@
                             <p class="card-text">Price: ${{ order.price }}</p>
                             <p class="card-text" style="color:red">{{ order.status }}</p>
                         </div>
-                        <div class="card-footer">
+                        <!--<div class="card-footer">
                             <form method="post" action="profile">
                                 {% csrf_token %}
                                 <input type="hidden" name="_method" value="DELETE">
                                 <input type="hidden" name="product_id" value="{{ order.fk_id_product.id_product }}">
                                 <button class="btn btn-danger btn-cancel" type="submit" name="product_id" value="{{ order.fk_id_product.id_product }}">Cancel</button>
                             </form>
-                        </div>        
+                        </div>       --> 
+
+                        <div class="card-footer">
+                            <button class="btn btn-danger btn-cancel" type="button" data-bs-toggle="modal"
+                                data-bs-target="#cancelConfirmationModal{{ order.id_product }}">
+                                Cancel
+                            </button>
+    
+                            <!-- Confirmation Modal -->
+                            <div class="modal fade" id="cancelConfirmationModal{{ order.id }}" tabindex="-1"
+                                aria-labelledby="cancelConfirmationModalLabel" aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="cancelConfirmationModalLabel">Confirm Cancellation</h5>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            Are you sure you want to cancel this order?
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                            <form method="post" action="/profile">
+                                                {% csrf_token %}
+                                                <input type="hidden" name="_method" value="DELETE">
+                                                <input type="hidden" name="product_id" value="{{ order.fk_id_product.id_product }}">
+                                                <button type="submit" class="btn btn-danger">Confirm Cancel</button>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 {% endfor %}
