--- a/bring_u/templates/request.html
+++ b/bring_u/templates/request.html
@@ -14,14 +14,14 @@
         <div class="container mt-5">
             <h1 style="text-align: center;">Solicitud </h1>
             <div class="d-flex justify-content-between align-items-center" id="cards-request">
-                <div class="card text-white bg-info mb-3"   style="max-width: 18rem;">
+                <div class="card text-white bg-info mb-3" onclick="redirectToLink('/my_request')"  style="max-width: 18rem;">
                     <div class="card-header" style="text-align: center;">PERSONALIZADA</div>
                     <div class="card-body">
                         <h5 class="card-title">Formulario :</h5>
                         <p class="card-text">Ingrese petición, nombre, descripción, precio, lugar de entrega</p>
                     </div>
                 </div>
-                <div class="card text-white bg-info mb-3" onclick="redirectToLink()" style="max-width: 18rem;">
+                <div class="card text-white bg-info mb-3" onclick="redirectToLink('/business')" style="max-width: 18rem;">
                     <div class="card-header" style="text-align: center;">NEGOCIOS</div>
                     <div class="card-body">
                         <h5 class="card-title">Redirigir a negocios:</h5>
@@ -33,7 +33,7 @@
 
         <script>
             function redirectToLink(url) {
-                window.location.href = '/business';
+                window.location.href = url;
             }
           </script>
     {% endblock %}
