Changes in project documentation routes

--- a/bring_u/templates/profile.html
+++ b/bring_u/templates/profile.html
@@ -4,7 +4,7 @@
             <h1>Perfil </h1>
             <h3>User Profile</h3>
             <p><strong>Username:</strong> {{ user.username }}</p>
-            <p><strong>First Name:</strong> {{ user.name }}</p>
+            <p><strong>First Name:</strong> {{ user.first_name }}</p>
             <p><strong>Last Name:</strong> {{ user.last_name }}</p>
             <p><strong>Tel:</strong> {{ user.tel }}</p>
             <p><strong>Email:</strong> {{ user.email }}</p>
