--- a/bring_u/templates/business.html
+++ b/bring_u/templates/business.html
@@ -2,8 +2,6 @@
       /*.navbar-brand {
           margin-right: 60vw!important; 
       }*/
-      .navbar-nav {
-      }
       #restaurant-list {
         margin-left: 5vw;
       }
@@ -28,7 +26,7 @@
       <div class="row justify-content-center">
           <div class="col-md-6">
               <form class="d-flex" action="">
-                  <input class="form-control me-2" name="searchBusiness" type="text"  placeholder="Buscar un negocio:" aria-label="Search">
+                  <input class="form-control me-2" name="searchBusiness" type="text"  placeholder="Buscar un negocio" aria-label="Search">
                   <button class="btn btn-primary" type="submit">Buscar</button>
                 </form>
               </div>
