--- a/bring_u/templates/home.html
+++ b/bring_u/templates/home.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -8,11 +7,11 @@
     <title>BRING-U</title>
 </head>
 <body>
-=======
->>>>>>> dec936645cbc51f94dcc630f40670155d188893f
-{% extends "base.html" %}
+    {% extends "base.html" %}
     {% block content %}
         <div class="container mt-5">
             <h1>BRING-U homepage</h1>
         </div>
-{% endblock %}  
+    {% endblock %}
+</body>
+  
