--- a/bring_u/templates/home.html
+++ b/bring_u/templates/home.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/home.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>BRING-U</title>
 </head>
@@ -12,6 +13,53 @@
         <div class="container mt-5">
             <h1>BRING-U homepage</h1>
         </div>
+        <br>
+        <br>
+    <div class="barra de busqueda">
+        <div class="col-md-6">
+            <form class="d-flex" action="">
+                <input class="form-control me-2" name="searchBusiness" type="text"  placeholder="Buscar" aria-label="Search">
+                <button class="btn btn-primary" type="submit">Buscar</button>
+              </form>
+            </div>
+          </div>
+    </div>
+    <br>
+    <br>
+    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="../../media/promfrisby.jpg" class="d-block w-100" alt="Promo Frisby">
+          </div>
+          <div class="carousel-item">
+            <img src="../../media/promo juan valdez.jpg" class="d-block w-100" alt="Promo Juan Valdez">
+          </div>
+          <div class="carousel-item">
+            <img src="../../media/Dunkindonuts.jpg" class="d-block w-100" alt="Promo Dunkin Donuts">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+    <br>
+    <br>
+    <br>
+    <div class="buttons">
+        <button class="btncustomorder" type="button">
+            <div class="button-content">
+                <img src="../../media/customOrderimage.jpg" alt="">
+                <span class="button-text">Button</span>
+            </div>
+        </button>
+        <button class="btn businesses" type="button">Button</button>
+    </div>
+    
     {% endblock %}
 </body>
   
