--- a/bring_u/templates/business_detail.html
+++ b/bring_u/templates/business_detail.html
@@ -97,7 +97,7 @@
                                         </div>
                                         <div class="modal-body">
                                           <!-- DELIVERY FORM -->
-                                          <form class="row g-3" method="POST" id="deliveryForm" action="/profile">
+                                          <form class="row g-3" method="POST" id="deliveryForm" action="/business">
                                             {% csrf_token %}
                                             <div class="mb-3">
                                                 <label for="delivery_location" class="form-label"><strong> Lugar entrega:</strong></label>
