--- a/bring_u/templates/profile.html
+++ b/bring_u/templates/profile.html
@@ -1,13 +1,81 @@
     {% extends "base.html" %}
+    
     {% block content %}
+        <style>
+            * {
+        margin: 0;
+        padding: 0;
+        }
+
+        #container {
+            display: flex;
+            flex-direction: row;
+        }
+        #title {
+            margin-bottom: 40px;
+        }
+        #switch{
+            position: relative;
+            display: inline-block;
+            width: 110px;
+            height: 60px;
+            margin: 0 10px;
+        }
+        #slid{
+            position: absolute;
+            cursor: pointer;
+            top:0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #ccc;
+            transition: .4s;
+            border-radius: 34px;
+
+        }
+        #switch input {display:none}
+
+        #slid:before {
+            position: absolute;
+            content: "";
+            height: 50px;
+            width: 50px;
+            left: 5px;
+            bottom: 5px;
+            background-color: white;
+            transition: 0.4s;
+            border-radius: 50px;
+        }
+
+        input:checked + #slid {
+            background-color: #ff278c;
+        }
+        input:checked + #slid:before {
+            transform: translateX(50px);
+        }
+        </style>
         <div class="container mt-5">
             <h1>Perfil </h1>
             <h3>User Profile</h3>
+            
             <p><strong>Username:</strong> {{ user.username }}</p>
             <p><strong>First Name:</strong> {{ user.first_name }}</p>
             <p><strong>Last Name:</strong> {{ user.last_name }}</p>
             <p><strong>Tel:</strong> {{ user.tel }}</p>
             <p><strong>Email:</strong> {{ user.email }}</p>
+            <p><input type="text" name="" id="is_service_prov" value="{{ user.is_service_prov }}" hidden></p>
+            <p>{{ user.is_service_prov }}</p>
+
+            <form method="POST" action="/profile" id="toggle-form">
+                {% csrf_token %}
+                <div id="container">
+                    <h3 id="title">Entregar Órdenes</h3>
+                    <label id="switch" for="deliver-orders">
+                        <input type="checkbox" name="deliver-orders" id="deliver-orders">
+                        <span id="slid"></span>
+                    </label>
+                </div>
+            </form>
             <h2>Órdenes en curso</h2>
             <div class="container">
             <div class="row">
@@ -63,4 +131,25 @@
         
             <h2>Historial de ordenes</h2>
         </div>
+        <script>
+            //ACTIVAR / DESACTIVAR ENTREGA DE PEDIDOS 
+
+            const form = document.getElementById('toggle-form');
+            const checkbox = document.getElementById('deliver-orders');
+            const isServiceProv = document.getElementById('is_service_prov');
+            // Set the initial state of the checkbox based on the value of is_service_prov
+            
+            checkbox.checked = isServiceProv.value === 'True' ? true : false;
+            
+            //checkbox.checked = isServiceProv.value;
+            checkbox.addEventListener('change', function () {
+                console.log('----', isServiceProv.value);
+                console.log('Checkbox', checkbox.checked);
+                form.submit();
+            })
+
+
+        </script>
+        
+        
     {% endblock %}
