--- a/bring_u/templates/business.html
+++ b/bring_u/templates/business.html
@@ -39,7 +39,7 @@
         <div class="container mt-5" id="clickable-container" onclick="redirectToLink('{{business.id_business}}')">
           <div class="row">
               <div class="col-md-2">
-                  <img src="../../media/food.png" alt="Image" class="img-fluid">
+                  <img src="media\bigos_logo.png" alt="Image" class="img-fluid">
               </div>
               <div class="col-md-8">
                   <ul class="list-group">
